# kaonic-comm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile
.github/workflows/: build.yml
cmake/: config.cmake  version.cmake
kaonic/: config.in  version.in
kaonic/include/kaonic/comm/common/: error.hpp  logging.hpp
kaonic/include/kaonic/comm/drivers/: gpio.hpp  spi.hpp
kaonic/include/kaonic/comm/mesh/: network.hpp  network_interface.hpp  network_receiver.hpp  radio_network.hpp  rfnet_port.h
kaonic/include/kaonic/comm/peripheral/: peripheral.hpp  peripheral_dispatcher.hpp  usb_peripheral.hpp
kaonic/include/kaonic/comm/protocols/: hdlc.hpp
kaonic/include/kaonic/comm/radio/: radio.hpp  rf215_radio.hpp
kaonic/include/kaonic/comm/serial/: hdlc.hpp  packet.hpp  serial.hpp
kaonic/include/kaonic/comm/services/: grpc_service.hpp  radio_service.hpp  serial_service.hpp
kaonic/include/kaonic/common/: error.hpp
kaonic/include/kaonic/grpc/: context.hpp  device_service.hpp  radio_service.hpp
kaonic/src/: CMakeLists.txt  main.cpp
kaonic/src/comm/drivers/: spi.cpp
kaonic/src/comm/mesh/: network.cpp  network_receiver.cpp  radio_network.cpp
kaonic/src/comm/peripheral/: peripheral_dispatcher.cpp  usb_peripheral.cpp
kaonic/src/comm/protocols/: hdlc.cpp
kaonic/src/comm/radio/: rf215_radio.cpp
kaonic/src/comm/serial/: hdlc.cpp  packet.cpp  serial.cpp
kaonic/src/comm/services/: grpc_service.cpp  radio_service.cpp  serial_service.cpp
kaonic/src/grpc/: context.cpp  device_service.cpp  radio_service.cpp
ota/: kaonic-ota.py
proto/: CMakeLists.txt  device.proto  kaonic.proto  radio.proto
scripts/: create-ota.py  upload-ota.py
tests/: CMakeLists.txt
tests/grpc_client/: CMakeLists.txt
tests/grpc_client/src/: main.cpp
tests/hdlc/: CMakeLists.txt
tests/hdlc/src/: main.cpp
